# 2024_Lab_6_Kirra_Noah

include/: FreeRTOSConfig.h  busy_threads.h
src/: CMakeLists.txt  busy_threads.c  hello_freertos.c  priority_inversion.c
test/: CMakeLists.txt  test.c
